# work-report-generator

./: .env.example  .gitignore  LICENSE  README.md  README_ru.md  pyproject.toml  requirements.txt
report_generator/: __init__.py  config.py  confluence_fetcher.py  gitlab_fetcher.py  jira_fetcher.py  main.py  pdf_builder.py  redmine_fetcher.py  uploader.py  utils.py  week_generator.py
report_generator/reports/: readme.md
tests/: __init__.py  test_confluence_fetcher.py  test_ensure_full_week.py  test_gitlab_fetcher.py  test_main_integration.py  test_pdf_generator.py  test_pie_chart.py  test_qr_code.py  test_redmine_fetcher.py  test_uploader_email.py  test_utils.py  test_week_generator.py
